--- a/index.html
+++ b/index.html
@@ -83,6 +83,114 @@
         <!-- Card -->
       </div>
       <!-- Bilan -->
+
+      <!-- Besoins Journaliers -->
+      <div class="tables-box">
+        <table>
+          <h2>Besoins à satifaire aujourd'hui</h2>
+          <thead>
+            <tr>
+              <th>Nom</th>
+              <th>Description</th>
+              <th>Date</th>
+              <th>Montant (XAF)</th>
+              <th>Status</th>
+            </tr>
+
+            <!-- <tr>Priorité</tr> -->
+          </thead>
+          <tbody>
+            <tr>
+              <td>Passport</td>
+              <td>
+                Passport express dans les deux prochains mois pour mener à bien
+                un projet crutiale ( dans huits mois)
+              </td>
+              <td>12 oct 2021</td>
+              <td>200,000</td>
+              <td>Actif</td>
+            </tr>
+
+            <tr>
+              <td>Laptop de travail</td>
+              <td>
+                Machine performante, core i5 ou core i7 avec minimum 8 Go de ram
+                et 1 To de Disque dure.
+              </td>
+              <td>01 Jan 2022</td>
+              <td>150,000</td>
+              <td>Actif</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <!-- Besoins Journaliers -->
+
+      <!-- Expenses & Besoin table recap-->
+      <div>
+        <table>
+          <h2>Dernières dépenses</h2>
+          <thead>
+            <tr>
+              <th>Nom</th>
+              <th>Description</th>
+              <th>Montant(XAF)</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Afficheur Tecno Camom 12</td>
+              <td>Réparation de l'afficheur en pane de mon smartphone</td>
+              <td>20 sep 2021</td>
+              <td>20,000</td>
+            </tr>
+            <tr>
+              <td>Coque HP 2000</td>
+              <td>Réparation de la coque endomagé de mon laptop</td>
+              <td>25 sep 2021</td>
+              <td>20,000</td>
+            </tr>
+            <tr>
+              <td>Nouvelle chemise</td>
+              <td>Chemise présentable pour passer un entretien</td>
+              <td>1 sep 2021</td>
+              <td>2,500</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <table>
+          <h2>Derniers Besoins</h2>
+          <thead>
+            <tr>
+              <th>Nom</th>
+              <th>Description</th>
+              <th>Montant(XAF)</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Afficheur Tecno Camom 12</td>
+              <td>Réparation de l'afficheur en pane de mon smartphone</td>
+              <td>20 sep 2021</td>
+              <td>20,000</td>
+            </tr>
+            <tr>
+              <td>Coque HP 2000</td>
+              <td>Réparation de la coque endomagé de mon laptop</td>
+              <td>25 sep 2021</td>
+              <td>20,000</td>
+            </tr>
+            <tr>
+              <td>Nouvelle chemise</td>
+              <td>Chemise présentable pour passer un entretien</td>
+              <td>1 sep 2021</td>
+              <td>2,500</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <!-- Expenses & Besoin table recap-->
     </main>
     <!-- Main -->
     <footer class="footer">Open Source project - Build by will-oracions</footer>
