--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="_app">
       <!-- Header -->
+
       <header class="header">
         <!-- Brand logo -->
         <div class="brand">Logo</div>
@@ -17,7 +18,7 @@
         <nav class="menu">
           <!-- Nav Menu -->
           <ul class="nav-menu">
-            <li>Acceuil</li>
+            <li class="active">Acceuil</li>
             <li>Dépenses</li>
             <li>Besoins</li>
             <li>Aujourd'hui</li>
@@ -58,7 +59,7 @@
             </div>
             <!-- Card amount -->
 
-            <div class="_card-count">55</div>
+            <div class="_card-count"><span>55</span></div>
           </div>
           <!-- Card -->
           <!-- Card -->
@@ -129,67 +130,71 @@
 
         <!-- Expenses & Besoin table recap-->
         <div>
-          <table>
-            <h2>Dernières dépenses</h2>
-            <thead>
-              <tr>
-                <th>Nom</th>
-                <th>Description</th>
-                <th>Montant(XAF)</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Afficheur Tecno Camom 12</td>
-                <td>Réparation de l'afficheur en pane de mon smartphone</td>
-                <td>20 sep 2021</td>
-                <td>20,000</td>
-              </tr>
-              <tr>
-                <td>Coque HP 2000</td>
-                <td>Réparation de la coque endomagé de mon laptop</td>
-                <td>25 sep 2021</td>
-                <td>20,000</td>
-              </tr>
-              <tr>
-                <td>Nouvelle chemise</td>
-                <td>Chemise présentable pour passer un entretien</td>
-                <td>1 sep 2021</td>
-                <td>2,500</td>
-              </tr>
-            </tbody>
-          </table>
+          <div class="tables-box">
+            <table>
+              <h2>Dernières dépenses</h2>
+              <thead>
+                <tr>
+                  <th>Nom</th>
+                  <th>Description</th>
+                  <th>Montant(XAF)</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Afficheur Tecno Camom 12</td>
+                  <td>Réparation de l'afficheur en pane de mon smartphone</td>
+                  <td>20 sep 2021</td>
+                  <td>20,000</td>
+                </tr>
+                <tr>
+                  <td>Coque HP 2000</td>
+                  <td>Réparation de la coque endomagé de mon laptop</td>
+                  <td>25 sep 2021</td>
+                  <td>20,000</td>
+                </tr>
+                <tr>
+                  <td>Nouvelle chemise</td>
+                  <td>Chemise présentable pour passer un entretien</td>
+                  <td>1 sep 2021</td>
+                  <td>2,500</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
 
-          <table>
-            <h2>Derniers Besoins</h2>
-            <thead>
-              <tr>
-                <th>Nom</th>
-                <th>Description</th>
-                <th>Montant(XAF)</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Afficheur Tecno Camom 12</td>
-                <td>Réparation de l'afficheur en pane de mon smartphone</td>
-                <td>20 sep 2021</td>
-                <td>20,000</td>
-              </tr>
-              <tr>
-                <td>Coque HP 2000</td>
-                <td>Réparation de la coque endomagé de mon laptop</td>
-                <td>25 sep 2021</td>
-                <td>20,000</td>
-              </tr>
-              <tr>
-                <td>Nouvelle chemise</td>
-                <td>Chemise présentable pour passer un entretien</td>
-                <td>1 sep 2021</td>
-                <td>2,500</td>
-              </tr>
-            </tbody>
-          </table>
+          <div class="tables-box">
+            <table>
+              <h2>Derniers Besoins</h2>
+              <thead>
+                <tr>
+                  <th>Nom</th>
+                  <th>Description</th>
+                  <th>Montant(XAF)</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Afficheur Tecno Camom 12</td>
+                  <td>Réparation de l'afficheur en pane de mon smartphone</td>
+                  <td>20 sep 2021</td>
+                  <td>20,000</td>
+                </tr>
+                <tr>
+                  <td>Coque HP 2000</td>
+                  <td>Réparation de la coque endomagé de mon laptop</td>
+                  <td>25 sep 2021</td>
+                  <td>20,000</td>
+                </tr>
+                <tr>
+                  <td>Nouvelle chemise</td>
+                  <td>Chemise présentable pour passer un entretien</td>
+                  <td>1 sep 2021</td>
+                  <td>2,500</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
         <!-- Expenses & Besoin table recap-->
       </main>
