build primary theme

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       <!-- Main -->
       <div class="_section-container main">
         <main>
+          <h2 class="bilan-title">Bilan du mois en cours</h2>
           <!-- Bilan -->
           <div class="bilan">
             <!-- Card -->
