modify header nav design

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
               <li class="active">
                 <a href="#">Acceuil</a>
               </li>
-              <li class="active">
+              <li class="">
                 <a href="#">Dépenses</a>
               </li>
-              <li class="active">
+              <li class="">
                 <a href="#">Besoins</a>
               </li>
-              <li class="active">
+              <li class="">
                 <a href="#">Aujourd'hui</a>
               </li>
             </ul>
