--- a/index.html
+++ b/index.html
@@ -150,6 +150,41 @@
                   <tr>
                     <th>Nom</th>
                     <th>Description</th>
+                    <th>Date</th>
+                    <th>Montant(XAF)</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Afficheur Tecno Camom 12</td>
+                    <td>Réparation de l'afficheur en pane de mon smartphone</td>
+                    <td>20 sep 2021</td>
+                    <td>20,000</td>
+                  </tr>
+                  <tr>
+                    <td>Coque HP 2000</td>
+                    <td>Réparation de la coque endomagé de mon laptop</td>
+                    <td>25 sep 2021</td>
+                    <td>20,000</td>
+                  </tr>
+                  <tr>
+                    <td>Nouvelle chemise</td>
+                    <td>Chemise présentable pour passer un entretien</td>
+                    <td>1 sep 2021</td>
+                    <td>2,500</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+
+            <div class="tables-box">
+              <table>
+                <h2>Dernières dépenses</h2>
+                <thead>
+                  <tr>
+                    <th>Nom</th>
+                    <th>Description</th>
+                    <th>Date</th>
                     <th>Montant(XAF)</th>
                   </tr>
                 </thead>
@@ -183,6 +218,7 @@
                   <tr>
                     <th>Nom</th>
                     <th>Description</th>
+                    <th>Date</th>
                     <th>Montant(XAF)</th>
                   </tr>
                 </thead>
