styling data previous section

--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
           <!-- Besoins Journaliers -->
           <div class="tables-box">
             <table>
-              <h2 id="title">Besoins de la journée</h2>
+              <div class="top">
+                <h2>Besoins de la journée</h2>
+                <!-- <button>Plus</button> -->
+              </div>
               <thead>
                 <tr>
                   <th>Nom</th>
@@ -136,20 +139,89 @@
                   <td>150,000</td>
                   <td>Actif</td>
                 </tr>
+
+                <tr>
+                  <td>Laptop de travail</td>
+                  <td>
+                    Machine performante, core i5 ou core i7 avec minimum 8 Go de
+                    ram et 1 To de Disque dure.
+                  </td>
+                  <td>01 Jan 2022</td>
+                  <td>150,000</td>
+                  <td>Actif</td>
+                </tr>
+
+                <tr>
+                  <td>Laptop de travail</td>
+                  <td>
+                    Machine performante, core i5 ou core i7 avec minimum 8 Go de
+                    ram et 1 To de Disque dure.
+                  </td>
+                  <td>01 Jan 2022</td>
+                  <td>150,000</td>
+                  <td>Actif</td>
+                </tr>
+
+                <tr>
+                  <td>Laptop de travail</td>
+                  <td>
+                    Machine performante, core i5 ou core i7 avec minimum 8 Go de
+                    ram et 1 To de Disque dure.
+                  </td>
+                  <td>01 Jan 2022</td>
+                  <td>150,000</td>
+                  <td>Actif</td>
+                </tr>
+
+                <tr>
+                  <td>Laptop de travail</td>
+                  <td>
+                    Machine performante, core i5 ou core i7 avec minimum 8 Go de
+                    ram et 1 To de Disque dure.
+                  </td>
+                  <td>01 Jan 2022</td>
+                  <td>150,000</td>
+                  <td>Actif</td>
+                </tr>
+
+                <tr>
+                  <td>Laptop de travail</td>
+                  <td>
+                    Machine performante, core i5 ou core i7 avec minimum 8 Go de
+                    ram et 1 To de Disque dure.
+                  </td>
+                  <td>01 Jan 2022</td>
+                  <td>150,000</td>
+                  <td>Actif</td>
+                </tr>
+
+                <tr>
+                  <td>Laptop de travail</td>
+                  <td>
+                    Machine performante, core i5 ou core i7 avec minimum 8 Go de
+                    ram et 1 To de Disque dure.
+                  </td>
+                  <td>01 Jan 2022</td>
+                  <td>150,000</td>
+                  <td>Actif</td>
+                </tr>
               </tbody>
             </table>
           </div>
           <!-- Besoins Journaliers -->
 
           <!-- Expenses & Besoin table recap-->
-          <div>
+          <div class="data-previous">
             <div class="tables-box">
               <table>
-                <h2>Dernières dépenses</h2>
+                <div class="top">
+                  <h2>Dernières dépenses</h2>
+                  <button class="_button primary">Plus</button>
+                </div>
                 <thead>
                   <tr>
                     <th>Nom</th>
-                    <th>Description</th>
+                    <!-- <th>Description</th> -->
                     <th>Date</th>
                     <th>Montant(XAF)</th>
                   </tr>
@@ -157,19 +229,55 @@
                 <tbody>
                   <tr>
                     <td>Afficheur Tecno Camom 12</td>
-                    <td>Réparation de l'afficheur en pane de mon smartphone</td>
+                    <!-- <td>Réparation de l'afficheur en pane de mon smartphone</td> -->
                     <td>20 sep 2021</td>
                     <td>20,000</td>
                   </tr>
                   <tr>
                     <td>Coque HP 2000</td>
-                    <td>Réparation de la coque endomagé de mon laptop</td>
+                    <!-- <td>Réparation de la coque endomagé de mon laptop</td> -->
                     <td>25 sep 2021</td>
                     <td>20,000</td>
                   </tr>
                   <tr>
                     <td>Nouvelle chemise</td>
-                    <td>Chemise présentable pour passer un entretien</td>
+                    <!-- <td>Chemise présentable pour passer un entretien</td> -->
+                    <td>1 sep 2021</td>
+                    <td>2,500</td>
+                  </tr>
+                  <tr>
+                    <td>Nouvelle chemise</td>
+                    <!-- <td>Chemise présentable pour passer un entretien</td> -->
+                    <td>1 sep 2021</td>
+                    <td>2,500</td>
+                  </tr>
+                  <tr>
+                    <td>Nouvelle chemise</td>
+                    <!-- <td>Chemise présentable pour passer un entretien</td> -->
+                    <td>1 sep 2021</td>
+                    <td>2,500</td>
+                  </tr>
+                  <tr>
+                    <td>Nouvelle chemise</td>
+                    <!-- <td>Chemise présentable pour passer un entretien</td> -->
+                    <td>1 sep 2021</td>
+                    <td>2,500</td>
+                  </tr>
+                  <tr>
+                    <td>Nouvelle chemise</td>
+                    <!-- <td>Chemise présentable pour passer un entretien</td> -->
+                    <td>1 sep 2021</td>
+                    <td>2,500</td>
+                  </tr>
+                  <tr>
+                    <td>Nouvelle chemise</td>
+                    <!-- <td>Chemise présentable pour passer un entretien</td> -->
+                    <td>1 sep 2021</td>
+                    <td>2,500</td>
+                  </tr>
+                  <tr>
+                    <td>Nouvelle chemise</td>
+                    <!-- <td>Chemise présentable pour passer un entretien</td> -->
                     <td>1 sep 2021</td>
                     <td>2,500</td>
                   </tr>
@@ -179,11 +287,14 @@
 
             <div class="tables-box">
               <table>
-                <h2>Dernières dépenses</h2>
+                <div class="top">
+                  <h2>Derniers Besoins</h2>
+                  <button class="_button primary">Plus</button>
+                </div>
                 <thead>
                   <tr>
                     <th>Nom</th>
-                    <th>Description</th>
+                    <!-- <th>Description</th> -->
                     <th>Date</th>
                     <th>Montant(XAF)</th>
                   </tr>
@@ -191,53 +302,55 @@
                 <tbody>
                   <tr>
                     <td>Afficheur Tecno Camom 12</td>
-                    <td>Réparation de l'afficheur en pane de mon smartphone</td>
+                    <!-- <td>Réparation de l'afficheur en pane de mon smartphone</td> -->
                     <td>20 sep 2021</td>
                     <td>20,000</td>
                   </tr>
                   <tr>
                     <td>Coque HP 2000</td>
-                    <td>Réparation de la coque endomagé de mon laptop</td>
+                    <!-- <td>Réparation de la coque endomagé de mon laptop</td> -->
                     <td>25 sep 2021</td>
                     <td>20,000</td>
                   </tr>
                   <tr>
                     <td>Nouvelle chemise</td>
-                    <td>Chemise présentable pour passer un entretien</td>
+                    <!-- <td>Chemise présentable pour passer un entretien</td> -->
                     <td>1 sep 2021</td>
                     <td>2,500</td>
                   </tr>
-                </tbody>
-              </table>
-            </div>
-
-            <div class="tables-box">
-              <table>
-                <h2>Derniers Besoins</h2>
-                <thead>
                   <tr>
-                    <th>Nom</th>
-                    <th>Description</th>
-                    <th>Date</th>
-                    <th>Montant(XAF)</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>Afficheur Tecno Camom 12</td>
-                    <td>Réparation de l'afficheur en pane de mon smartphone</td>
-                    <td>20 sep 2021</td>
-                    <td>20,000</td>
-                  </tr>
-                  <tr>
-                    <td>Coque HP 2000</td>
-                    <td>Réparation de la coque endomagé de mon laptop</td>
-                    <td>25 sep 2021</td>
-                    <td>20,000</td>
+                    <td>Nouvelle chemise</td>
+                    <!-- <td>Chemise présentable pour passer un entretien</td> -->
+                    <td>1 sep 2021</td>
+                    <td>2,500</td>
                   </tr>
                   <tr>
                     <td>Nouvelle chemise</td>
-                    <td>Chemise présentable pour passer un entretien</td>
+                    <!-- <td>Chemise présentable pour passer un entretien</td> -->
+                    <td>1 sep 2021</td>
+                    <td>2,500</td>
+                  </tr>
+                  <tr>
+                    <td>Nouvelle chemise</td>
+                    <!-- <td>Chemise présentable pour passer un entretien</td> -->
+                    <td>1 sep 2021</td>
+                    <td>2,500</td>
+                  </tr>
+                  <tr>
+                    <td>Nouvelle chemise</td>
+                    <!-- <td>Chemise présentable pour passer un entretien</td> -->
+                    <td>1 sep 2021</td>
+                    <td>2,500</td>
+                  </tr>
+                  <tr>
+                    <td>Nouvelle chemise</td>
+                    <!-- <td>Chemise présentable pour passer un entretien</td> -->
+                    <td>1 sep 2021</td>
+                    <td>2,500</td>
+                  </tr>
+                  <tr>
+                    <td>Nouvelle chemise</td>
+                    <!-- <td>Chemise présentable pour passer un entretien</td> -->
                     <td>1 sep 2021</td>
                     <td>2,500</td>
                   </tr>
