--- a/expenses.html
+++ b/expenses.html
@@ -36,9 +36,9 @@
                   <li>
                     <a href="#">Besoins</a>
                   </li>
-                  <li class="">
+                  <!-- <li class="">
                     <a href="#">Aujourd'hui</a>
-                  </li>
+                  </li> -->
                 </ul>
                 <!-- Nav Menu -->
 
