--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
               <li class="">
                 <a href="#">Besoins</a>
               </li>
-              <li class="">
+              <!-- <li class="">
                 <a href="#">Aujourd'hui</a>
-              </li>
+              </li> -->
             </ul>
             <!-- Nav Menu -->
 
