--- a/besoins.html
+++ b/besoins.html
@@ -20,13 +20,13 @@
             <!-- Nav Menu -->
             <ul class="nav-menu">
               <li>
-                <a href="#">Acceuil</a>
+                <a href="index.html">Acceuil</a>
               </li>
               <li class="">
-                <a href="#">Dépenses</a>
+                <a href="expenses.html">Dépenses</a>
               </li>
               <li class="active" class="">
-                <a href="#">Besoins</a>
+                <a href="besoins.html">Besoins</a>
               </li>
               <!-- <li class="">
                 <a href="#">Aujourd'hui</a>
@@ -36,9 +36,9 @@
 
             <!-- Control Options -->
             <ul class="control-options">
-              <li>Add</li>
-              <li>notifications</li>
-              <li>paramètres</li>
+              <li><a href="add.html">Add</a></li>
+              <li><a href="notifications.html">Notifications</a></li>
+              <li><a href="settings.html">Paramètres</a></li>
             </ul>
             <!-- Control Options -->
           </nav>
