--- a/expenses.html
+++ b/expenses.html
@@ -28,13 +28,13 @@
                 <!-- Nav Menu -->
                 <ul class="nav-menu">
                   <li>
-                    <a href="#">Acceuil</a>
+                    <a href="index.html">Acceuil</a>
                   </li>
                   <li class="active">
-                    <a href="#">Dépenses</a>
+                    <a href="expenses.html">Dépenses</a>
                   </li>
                   <li>
-                    <a href="#">Besoins</a>
+                    <a href="besoins.html">Besoins</a>
                   </li>
                   <!-- <li class="">
                     <a href="#">Aujourd'hui</a>
@@ -44,9 +44,9 @@
 
                 <!-- Control Options -->
                 <ul class="control-options">
-                  <li>Add</li>
-                  <li>notifications</li>
-                  <li>paramètres</li>
+                  <li><a href="add.html">Add</a></li>
+                  <li><a href="notifications.html">Notifications</a></li>
+                  <li><a href="settings.html">Paramètres</a></li>
                 </ul>
                 <!-- Control Options -->
               </nav>
