--- a/settings.html
+++ b/settings.html
@@ -53,6 +53,8 @@
         <main>
           <div id="notifications">
             <h1>Paramètres</h1>
+            <h3>En cours de développement...</h3>
+            <h5>Très bientôt disponible</h5>
           </div>
         </main>
       </div>
